--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -44,6 +44,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -106,13 +110,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="WebGrease">
+    <Reference Include="WebGrease, Version=1.6.5135.21930, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
-    </Reference>
-    <Reference Include="Antlr3.Runtime">
-      <Private>True</Private>
-      <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -316,7 +316,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -397,7 +397,6 @@
     <Content Include="Views\Shared\DisplayTemplates\ProcessStep.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\ProcessStepTemplate.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\ProcessTemplate.cshtml" />
-    <Content Include="Views\Shared\DisplayTemplates\PuchaseOrder.cshtml" />
     <Content Include="Views\ProcessTemplates\Create.cshtml" />
     <Content Include="Views\ProcessTemplates\Details.cshtml" />
     <Content Include="Views\ProcessTemplates\Edit.cshtml" />
@@ -406,7 +405,6 @@
     <Content Include="Views\ProcessStepTemplates\Details.cshtml" />
     <Content Include="Views\ProcessStepTemplates\Edit.cshtml" />
     <Content Include="Views\ProcessStepTemplates\Index.cshtml" />
-    <Content Include="Views\ProcessSteps\Create.cshtml" />
     <Content Include="Views\ProcessSteps\Details.cshtml" />
     <Content Include="Views\ProcessSteps\Edit.cshtml" />
     <Content Include="Views\ProcessSteps\Index.cshtml" />
@@ -416,6 +414,11 @@
     <Content Include="Views\PurchaseOrders\Edit.cshtml" />
     <Content Include="Views\PurchaseOrders\Index.cshtml" />
     <Content Include="Views\AdmPanel\SelectTheme.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Product.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Boolean.cshtml" />
+    <Content Include="Views\PurchaseOrders\Approve.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\PurchaseOrder.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\Boolean.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
